TC can only Edit own TC

--- a/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Index.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Index.cshtml
@@ -1,6 +1,13 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using Application.Interfaces.Repositories.SQL;
+@using Microsoft.AspNetCore.DataProtection;
+@using Microsoft.AspNetCore.Mvc.Localization
+@using Application.Security
 @inject IViewLocalizer Localizer
 @model PaginatedList<TrainingCenterIndexViewModel>
+@inject UserManager<IdentityUser> userManager
+@inject ITrainingCentersSQLRepository trainingCentersSQLRepository
+@inject IDataProtectionProvider dataProtectionProvider
+@inject IDataProtectionPurposeStrings dataProtectionPurposeStrings
 
 @{
     ViewData["Title"] = Localizer["Training Centers Index"];
@@ -9,6 +16,10 @@
     var userCanEditTrainingCenters = User.CanEdit(ClaimsTypesStore.TrainingCenters);
     var userCanCreateTrainingCenters = User.CanCreate(ClaimsTypesStore.TrainingCenters);
     var userCanDeleteTrainingCenters = User.CanDelete(ClaimsTypesStore.TrainingCenters);
+
+    var protector = dataProtectionProvider.CreateProtector(dataProtectionPurposeStrings.IdRouteValue);
+    
+    var usersTrainingCenterID = await User.GetTrainingCenterID(userManager, trainingCentersSQLRepository, protector);
 }
 
 <h1>@Localizer["Training Centers Index"]</h1>
@@ -153,7 +164,7 @@
                     <a asp-controller="@typeof(TrainingCentersController).GetNameOfController()" asp-action="@nameof(TrainingCentersController.Details)"
                         asp-route-id="@trainingCenter.EncryptedId" asp-route-returnUrl="@currentUrl">@Localizer["Details"]</a>
                 }
-                @if (userCanEditTrainingCenters)
+                @if (userCanEditTrainingCenters && (usersTrainingCenterID == null || usersTrainingCenterID == protector.Unprotect(@trainingCenter.EncryptedId)))
                 {
                     <text>|</text> <a asp-controller="@typeof(TrainingCentersController).GetNameOfController()" asp-action="@nameof(TrainingCentersController.Edit)"
                         asp-route-id="@trainingCenter.EncryptedId" asp-route-returnUrl="@currentUrl">@Localizer["Edit"]</a>
@@ -165,7 +176,6 @@
                 }
             </td>
         </tr>
-
         }
     </tbody>
 </table>
