--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Contacts/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Contacts/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
-@model Application.ViewModels.ContactCreateViewModel
+@model ContactCreateViewModel
 
 @{
     ViewData["Title"] = Localizer["Contact Create"];
@@ -39,5 +39,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
