--- a/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Create.cshtml
@@ -23,8 +23,9 @@
             <div class="form-group row">
                 <label asp-for="IsActive" class="col-sm-2 col-form-label"></label>
                 <div class="input-group col-sm-10">
-                    <input asp-for="IsActive" class="form-check-input" style="margin-left : 0" />
+                    <input asp-for="IsActive" class="form-check-input" style="margin-left:0" />
                 </div>
+                <span asp-validation-for="IsActive" class="text-danger"></span>
             </div>
             <div class="form-group row">
                 <label asp-for="CompanyID" class="col-sm-2 col-form-label"></label>
@@ -77,6 +78,9 @@
 </div>
 
 @section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
     <script src="~/js/TrainingCenters/GetTrainingCenterLetterByTrainingCenterID.js"></script>
     <script src="~/js/ResetSelect.js"></script>
 }
